# trash

./: LICENSE  README.md  setup.cfg
trash/: __init__.py  cli.py  trash.py
