[metadata]
name = trash
version = attr: trash.__version__
author = Jed Willick
# author_email =
url = "https://github.com/jedwillick/trash"
description =
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        'Development Status :: 3 - Alpha'
        'Intended Audience :: Linux Users'
        'License :: OSI Approved :: MIT License'
        'Programming Language :: Python :: 3'
        'Programming Language :: Python :: 3.8'
        'Programming Language :: Python :: 3.9'
        "Programming Language :: Python :: 3.10"
        'Programming Language :: Python :: 3 :: Only'

[options]
zip_safe = False
python_requires = >= 3.8
packages = trash
install_requires =

[options.extras_require]
dev =
    black
    flake8
    isort

[options.entry_points]
console_scripts =
    trash = trash.cli:main

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = build
